[gd_scene load_steps=15 format=3 uid="uid://cwj3amhvlidqk"]

[ext_resource type="Script" path="res://Enemies/enemy.gd" id="1_js6l0"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_futub"]
albedo_color = Color(1, 0, 0.0235294, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_iewrd"]
material = SubResource("StandardMaterial3D_futub")

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_cgsxn"]

[sub_resource type="BoxMesh" id="BoxMesh_llor4"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_nhqxw"]
points = PackedVector3Array(-0.5, -0.5, -0.5, 0.5, 0.5, 0.5, 0.5, -0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, -0.5, -0.5, -0.5, -0.5, 0.5, -0.5, 0.5, -0.5)

[sub_resource type="Animation" id="Animation_0tns4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D/WeaponPivot/WeaponMesh:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.264426, -0.166635, -0.582979)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera3D/WeaponPivot/WeaponMesh:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-0.252881, -0.000168331, -0.00215103)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Camera3D/WeaponPivot:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Camera3D/Weapon2Pivot/Weapon2Mesh:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.588263, 0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Camera3D/Weapon2Pivot/Weapon2Mesh:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-0.926808, -0.743054, -0.675123)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Enemy/WeaponPivot:rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, -0.331351, 0)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Enemy/WeaponPivot/WeaponMesh:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.417305, -0.079986, -0.582979)]
}

[sub_resource type="Animation" id="Animation_mxep2"]
resource_name = "attack"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D/WeaponPivot/WeaponMesh:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.952083, -0.285903, -0.582979)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera3D/WeaponPivot/WeaponMesh:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-1.49662, -1.26215, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Camera3D/WeaponPivot:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(3.03143, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 2.05472, 0)]
}

[sub_resource type="Animation" id="Animation_n1nek"]
resource_name = "attack2"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D/Weapon2Pivot/Weapon2Mesh:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.7),
"transitions": PackedFloat32Array(-2, -2, -2),
"update": 0,
"values": [Vector3(0.588263, 0, 0), Vector3(0.588263, 0, 0), Vector3(-0.300877, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera3D/Weapon2Pivot/Weapon2Mesh:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4, 0.7),
"transitions": PackedFloat32Array(-2, -2, -2),
"update": 0,
"values": [Vector3(-0.926808, -0.743054, -0.675123), Vector3(-0.926808, -0.432976, -0.94328), Vector3(-0.926808, -0.781093, -0.94328)]
}

[sub_resource type="Animation" id="Animation_4watr"]
resource_name = "enemy_attack"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Enemy/WeaponPivot:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(10.556, 10.556),
"update": 0,
"values": [Vector3(0, -0.331351, 0), Vector3(0, 2.00015, 0)]
}

[sub_resource type="Animation" id="Animation_ji688"]
resource_name = "enemy_idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Enemy/WeaponPivot/WeaponMesh:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(-2),
"update": 0,
"values": [Vector3(-0.452775, 0.0651963, -0.569035)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Enemy/WeaponPivot/WeaponMesh:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector3(0.417305, -0.254443, -0.582979), Vector3(0.417305, -0.079986, -0.582979)]
}

[sub_resource type="Animation" id="Animation_igfwe"]
resource_name = "idle"
length = 3.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D/WeaponPivot/WeaponMesh:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector3(-0.252881, -0.000168331, -0.00215103), Vector3(-0.252881, -0.257901, -0.00215103)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera3D/WeaponPivot/WeaponMesh:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector3(0.264426, -0.166635, -0.582979), Vector3(0.315836, -0.273328, -0.582979)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Camera3D/WeaponPivot:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_yunih"]
resource_name = "idle2"
length = 3.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D/Weapon2Pivot/Weapon2Mesh:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector3(0.588263, 0, 0), Vector3(0.588176, -0.258309, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera3D/Weapon2Pivot/Weapon2Mesh:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector3(-0.926808, -0.743054, -0.675123), Vector3(-0.959491, -0.809901, -0.675123)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kdqeb"]
_data = {
"RESET": SubResource("Animation_0tns4"),
"attack": SubResource("Animation_mxep2"),
"attack2": SubResource("Animation_n1nek"),
"enemy_attack": SubResource("Animation_4watr"),
"enemy_idle": SubResource("Animation_ji688"),
"idle": SubResource("Animation_igfwe"),
"idle2": SubResource("Animation_yunih")
}

[node name="Enemy" type="CharacterBody3D" groups=["enemy"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
script = ExtResource("1_js6l0")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
mesh = SubResource("CapsuleMesh_iewrd")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource("CapsuleShape3D_cgsxn")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
target_desired_distance = 3.0
avoidance_enabled = true

[node name="WeaponPivot" type="Node3D" parent="."]
transform = Transform3D(0.945604, 0, -0.325321, 0, 1, 0, 0.325321, 0, 0.945604, 0, 0.848667, 0)

[node name="WeaponMesh" type="MeshInstance3D" parent="WeaponPivot"]
transform = Transform3D(0.0855988, 0.513665, 0.00585853, -0.0484526, 0.757536, 0.0437462, 0.0180329, -0.402849, 0.0897325, 0.417305, -0.254443, -0.582979)
mesh = SubResource("BoxMesh_llor4")

[node name="Hitbox" type="Area3D" parent="WeaponPivot/WeaponMesh" groups=["player"]]
transform = Transform3D(1.1, 0, 0, 0, 1.1, 0, 0, 0, 1.1, 0, 0, 0)
monitoring = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="WeaponPivot/WeaponMesh/Hitbox"]
transform = Transform3D(1, 8.14907e-10, 5.82077e-11, 0, 1, 0, 5.82077e-11, -2.38419e-07, 1, 0, 0, 0)
shape = SubResource("ConvexPolygonShape3D_nhqxw")

[node name="AnimationPlayer" type="AnimationPlayer" parent="WeaponPivot"]
root_node = NodePath("../../..")
autoplay = "enemy_idle"
playback_default_blend_time = 0.1
libraries = {
"": SubResource("AnimationLibrary_kdqeb")
}

[connection signal="target_reached" from="NavigationAgent3D" to="." method="_on_navigation_agent_3d_target_reached"]
[connection signal="velocity_computed" from="NavigationAgent3D" to="." method="_on_navigation_agent_3d_velocity_computed"]
[connection signal="body_entered" from="WeaponPivot/WeaponMesh/Hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="animation_finished" from="WeaponPivot/AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
